--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Graham - Portfolio</title>
+    <title>Kevin Asombrado - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span>AG</span>
+                <span>KA</span>
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
@@ -21,7 +21,7 @@
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact">
-                <a href="mailto:hello@alexgraham.com" class="contact-link">hello@alexgraham.com</a>
+                <a href="mailto:kevinasombrado15@gmail.com" class="contact-link">kevinasombrado15@gmail.com</a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -32,17 +32,17 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <div class="hero-background">
+            <img src="images/kevin.png" alt="Kevin" class="hero-bg-image">
+        </div>
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="hero-name">Alex Graham</h1>
+                    <h1 class="hero-name">Kevin Asombrado</h1>
                     <div class="hero-titles">
                         <span class="title-line">// Web Designer</span>
-                        <span class="title-line">Art Director</span>
+                        <span class="title-line">Layout Director</span>
                     </div>
-                </div>
-                <div class="hero-image">
-                    <img src="data:image/svg+xml,%3Csvg width='400' height='600' viewBox='0 0 400 600' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='400' height='600' fill='%23151515'/%3E%3Cpath d='M200 200C250 200 290 240 290 290V400C290 450 250 490 200 490C150 490 110 450 110 400V290C110 240 150 200 200 200Z' fill='%23fff' fill-opacity='0.1'/%3E%3C/svg%3E" alt="Profile">
                 </div>
             </div>
             <div class="hero-description">
@@ -84,8 +84,8 @@
                         <ul>
                             <li>8+ Years Design</li>
                             <li>50+ Projects Delivered</li>
-                            <li>Based in Toronto</li>
-                            <li>Working Globally</li>
+                            <li>Based in Sarangani</li>
+                            <li>Working Nationally</li>
                         </ul>
                     </div>
                 </div>
@@ -101,16 +101,16 @@
                 <h2 class="section-title">Selected Work</h2>
             </div>
             <div class="work-grid">
-                <div class="work-item" data-year="2024">
+                <div class="work-item" data-year="2025">
                     <div class="work-image">
-                        <img src="data:image/svg+xml,%3Csvg width='600' height='400' viewBox='0 0 600 400' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='600' height='400' fill='%23ff6b35'/%3E%3Cpath d='M100 150h400v100H100z' fill='%23fff' fill-opacity='0.1'/%3E%3C/svg%3E" alt="Formula Vintage">
+                        <img src="images/OMANSS.png" alt="CNSM's College Shirt">
                     </div>
                     <div class="work-info">
-                        <h3>Formula Vintage</h3>
-                        <p>A celebration of classic motorsport through immersive digital storytelling and interactive timelines.</p>
+                        <h3>CNSM's College Shirt</h3>
+                        <p>An annual branding of college apparel for intramurals and other events.</p>
                         <div class="work-tags">
-                            <span>Web Design</span>
-                            <span>Development</span>
+                            <span>Branding</span>
+                            <span>Merch</span>
                             <span>Art Direction</span>
                         </div>
                     </div>
@@ -118,44 +118,44 @@
 
                 <div class="work-item" data-year="2024">
                     <div class="work-image">
-                        <img src="data:image/svg+xml,%3Csvg width='600' height='400' viewBox='0 0 600 400' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='600' height='400' fill='%23667eea'/%3E%3Cpath d='M200 100c100 0 200 50 200 150s-100 150-200 150-200-50-200-150 100-150 200-150z' fill='%23fff' fill-opacity='0.1'/%3E%3C/svg%3E" alt="Spray Zest">
+                        <img src="images/2ndSem.png" alt="Bagwis Student Newsletter">
                     </div>
                     <div class="work-info">
-                        <h3>Spray Zest</h3>
-                        <p>Brand identity and e-commerce platform for a premium fragrance company focused on sustainability.</p>
+                        <h3>Bagwis Student Newsletter</h3>
+                        <p>A monthly issue of collective articles surrounding the uninversity's current happenings.</p>
                         <div class="work-tags">
-                            <span>Branding</span>
-                            <span>E-commerce</span>
-                            <span>Motion</span>
+                            <span>Journalism</span>
+                            <span>Publication</span>
+                            <span>Voice</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="work-item" data-year="2023">
                     <div class="work-image">
-                        <img src="data:image/svg+xml,%3Csvg width='600' height='400' viewBox='0 0 600 400' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='600' height='400' fill='%23f093fb'/%3E%3Cpath d='M0 0h600v200L300 400L0 200z' fill='%23fff' fill-opacity='0.1'/%3E%3C/svg%3E" alt="Super Pro">
+                        <img src="images/4ever3.jpg" alt="Personal Work">
                     </div>
                     <div class="work-info">
-                        <h3>Super Pro</h3>
-                        <p>Digital transformation for a leading sports equipment manufacturer, featuring dynamic product showcases.</p>
+                        <h3>Personal Work</h3>
+                        <p>Designing posters base on musical artist and different interpretations of philosophy.</p>
                         <div class="work-tags">
-                            <span>Strategy</span>
-                            <span>UI/UX</span>
-                            <span>Development</span>
+                            <span>Fluid</span>
+                            <span>Abstract</span>
+                            <span>Limitless</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="work-item" data-year="2023">
                     <div class="work-image">
-                        <img src="data:image/svg+xml,%3Csvg width='600' height='400' viewBox='0 0 600 400' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='600' height='400' fill='%23a8e6cf'/%3E%3Cpath d='M100 100h400l-200 200z' fill='%23fff' fill-opacity='0.1'/%3E%3C/svg%3E" alt="Architech Buildings">
+                        <img src="images/bagwis.png" alt="User Interface and User Experience">
                     </div>
                     <div class="work-info">
-                        <h3>Architech Buildings</h3>
-                        <p>Architectural firm website featuring immersive project galleries and sustainable design philosophy.</p>
+                        <h3>User Interface and User Experience</h3>
+                        <p>Collection of UI/UX of different platforms such as Android and Web.</p>
                         <div class="work-tags">
                             <span>Web Design</span>
-                            <span>Photography</span>
+                            <span>Human interaction</span>
                             <span>Content Strategy</span>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                 <div class="contact-text">
                     <p class="large-text">Have a project in mind? Let's create something extraordinary together.</p>
                     <div class="contact-links">
-                        <a href="mailto:hello@alexgraham.com" class="contact-link-large">hello@alexgraham.com</a>
+                        <a href="mailto:kevinasombrado15@gmail.com" class="contact-link-large">kevinasombrado15@gmail.com</a>
                         <div class="social-links">
                             <a href="#" class="social-link">Instagram</a>
                             <a href="#" class="social-link">Dribbble</a>
