--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-description">
                 <div class="description-content">
-                    <p>Crafting digital experiences that push boundaries and challenge conventions. Based in Toronto, working globally with forward-thinking brands and agencies.</p>
+                    <p>Crafting digital experiences that push boundaries and challenge conventions. Based in Sarangani, working globally with forward-thinking brands and agencies.</p>
                 </div>
                 <div class="scroll-indicator">
                     <span>01</span>
