--- a/datatables/datatables.html
+++ b/datatables/datatables.html
@@ -1,16 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DataTable Editable</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="https://cdn.datatables.net/2.3.4/css/dataTables.bootstrap5.css"/>
+<!-- <link rel="stylesheet" href="datatable-modern.css" /> -->
 </head>
 <body>
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/2.3.4/css/dataTables.dataTables.css">
-
-<div>
-        Toggle column: <a class="toggle-vis" data-column="0">Name</a> - <a class="toggle-vis" data-column="1">Position</a> - <a class="toggle-vis" data-column="2">Office</a> - <a class="toggle-vis" data-column="3">Age</a> - <a class="toggle-vis" data-column="4">Start date</a> - <a class="toggle-vis" data-column="5">Salary</a>
-    </div>
-    <table id="example" class="display">
+<table id="example" class="table table-striped">
         <thead>
             <tr>
                 <th>Name</th>
@@ -491,41 +491,11 @@
         </tfoot>
     </table>
 
-<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.7.1.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/2.3.4/js/dataTables.js"></script>
-<script type="text/javascript">
-
-const table = new DataTable('#example', {
-    layout: {
-        topStart: 'info',
-        topEnd: null,
-        bottom: 'paging',   // Keep paging controls at bottom
-        bottomStart: null,
-        bottomEnd: null
-    },
-    paging: true,           // ✅ Enable pagination
-    scrollY: '200px'        // ✅ Scroll within each page
-});
-
-// Toggle column visibility
-document.querySelectorAll('a.toggle-vis').forEach((el) => {
-    el.addEventListener('click', function (e) {
-        e.preventDefault();
-
-        let columnIdx = e.target.getAttribute('data-column');
-        let column = table.column(columnIdx);
-
-        // Toggle the visibility
-        column.visible(!column.visible());
-    });
-});
-
-
-
-</script>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.datatables.net/2.3.4/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/2.3.4/js/dataTables.bootstrap5.js"></script>
+    <script src="js/datatables-setup.js"></script>
 
 </body>
-
-
 </html>
