--- a/PaymentTracker/Day1/COA/index.html
+++ b/PaymentTracker/Day1/COA/index.html
@@ -491,7 +491,7 @@
         CBAA: ["BS ACC", "BS ECON", "BSBA BE", "BSBA HRM", "BSBA MM"],
         CFAS: ["BS F", "MS MB", "BS AC", "BS FP"],
         COEd: ["BSED BIO", "BSED ENG", "BSED FIL", "BSED MATH", "BPED", "BEED"],
-        COA: ["BS ABM", "BS ABE", "BSA ANSCI", "BSA AGRON", "DIP ANSCI", "DIP AGRON"],
+        COA: ["BS ABM", "BS ABE", "BSA ANSCI", "BSA AGRON", "BS HORTI", "BS AGRI EXTENSION", "DIP ANSCI", "DIP AGRON"],
         IIAIS: ["BA IS", "BA IS Maj. in Shariah"],
         CSSH: ["BA ELS", "BA LCS", "AB FIL", "AB POLSCI", "AB HIST", "AB SOCIOL", "AB PSYCH"],
         CON: ["BSN"],
@@ -1103,3 +1103,4 @@
   
 </body>
 </html>
+
