Update fmt.Println message from 'Hello World'

--- a/PaymentTracker/Day1/CFAS/index.html
+++ b/PaymentTracker/Day1/CFAS/index.html
@@ -489,7 +489,7 @@
         CNSM: ["BSIT", "BSPhysics", "BSMath", "BSBio", "BSChem"],
         COE: ["BS CE", "BS ELECTRICAL ENG", "BS ELECTRONICS ENG", "BS ENG TECH", "BS ME", "DIP AT", "DIP BCT", "DIP ET", "DIP MST"],
         CBAA: ["BS ACC", "BS ECON", "BSBA BE", "BSBA HRM", "BSBA MM"],
-        CFAS: ["BS F", "MS MB", "BS AC", "BS FP"],
+        CFAS: ["BS F", "MS MB", "BS AQC", "BS FP", "DIP AQC", "DIP FISH PRO"],
         COEd: ["BSED BIO", "BSED ENG", "BSED FIL", "BSED MATH", "BPED", "BEED"],
         COA: ["BS ABM", "BS ABE", "BSA ANSCI", "BSA AGRON", "DIP ANSCI", "DIP AGRON"],
         IIAIS: ["BA IS", "BA IS Maj. in Shariah"],
@@ -1103,3 +1103,4 @@
   
 </body>
 </html>
+
